# nova_g4.junting

./: .gitignore  CMakeLists.txt  GNUmakefile  LXe.cc  general_particle_source.mac  gui.mac  nova.cc  run.mac  run_gui.mac  vis.mac
include/: F04Trajectory.hh  F04TrajectoryPoint.hh  LXeDetectorConstruction.hh  LXeDetectorMessenger.hh  LXeEMPhysics.hh  LXeEventAction.hh  LXeEventMessenger.hh  LXeGeneralPhysics.hh  LXeMainVolume.hh  LXeMuonPhysics.hh  LXePMTHit.hh  LXePMTSD.hh  LXePrimaryGeneratorAction.hh  LXeRecorderBase.hh  LXeRunAction.hh  LXeScintHit.hh  LXeScintSD.hh  LXeSteppingMessenger.hh  LXeSteppingVerbose.hh  LXeTrackingAction.hh  LXeTrajectory.hh  LXeUserEventInformation.hh  LXeUserTrackInformation.hh  LXeWLSFiber.hh  LXeWLSSlab.hh  NovaDetectorConstruction.hh  NovaDetectorMessenger.hh  NovaEmPhysics.hh  NovaEventAction.hh  NovaEventMessenger.hh  NovaGeneralPhysics.hh  NovaLiquidScintillatorHit.hh  NovaLiquidScintillatorSd.hh  NovaMainVolume.hh  NovaMuonPhysics.hh  NovaPhysicsList.hh  NovaPmtHit.hh  NovaPmtSd.hh  NovaPrimaryGeneratorAction.hh  NovaPrimaryGeneratorMessenger.hh  (+12 more)
input/: PSTBulkAbsorb.cfg  WLSemit.cfg  avg_ext.txt  bisMSB_emission.txt  k27_emission.csv  ppo_emission.txt  refraction_index_fluorinated_polymer.csv  refraction_index_pmma.csv  refraction_index_polystyrene_k27.csv
plot/: cosmic.py  interpolation.C  led_spectrum.py  nova.C  nova.py  plot.electron_gun.py  quadrant.py  spill.py  test_distribution_width.C  timing.C  timing.py  tns.py
src/: F04Trajectory.cc  F04TrajectoryPoint.cc  LXeDetectorConstruction.cc  LXeDetectorMessenger.cc  LXeEMPhysics.cc  LXeEventAction.cc  LXeEventMessenger.cc  LXeGeneralPhysics.cc  LXeMainVolume.cc  LXeMuonPhysics.cc  LXePMTHit.cc  LXePMTSD.cc  LXePhysicsList.cc  LXePrimaryGeneratorAction.cc  LXeRunAction.cc  LXeScintHit.cc  LXeScintSD.cc  LXeStackingAction.cc  LXeSteppingAction.cc  LXeSteppingMessenger.cc  LXeSteppingVerbose.cc  LXeTrackingAction.cc  LXeTrajectory.cc  LXeUserEventInformation.cc  LXeUserTrackInformation.cc  LXeWLSFiber.cc  LXeWLSSlab.cc  NovaDetectorConstruction.cc  NovaDetectorMessenger.cc  NovaEmPhysics.cc  NovaEventAction.cc  NovaEventMessenger.cc  NovaGeneralPhysics.cc  NovaLiquidScintillatorHit.cc  NovaLiquidScintillatorSd.cc  NovaMainVolume.cc  NovaMuonPhysics.cc  (+16 more)
